# services

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  Taskfile.yml  go.work  go.work.sum  pyproject.toml
.github/notifications/discord/: deploy-result.json  image-publish-result.json
.github/scripts/: send-discord-deploy.sh  send-discord-image-publish.sh
.github/scripts/tests/: test-send-discord-deploy.sh  test-send-discord-image-publish.sh
.github/workflows/: ci.yml  dropmong-web.yml  e2e.yml  frontend-publish.yml  image-build.yml  image-publish.yml  security-scan.yml  service-tests.yml
config/: services.yml
contracts/: README.md  common-conventions.md  jwt-conventions.md  operational-endpoints.md
contracts/common/: components.yaml
contracts/events/: dropmong-purchase-events.md
contracts/services/auth-service/: openapi.yaml
contracts/services/catalog-service/: openapi.yaml
contracts/services/concert-service/: openapi.yaml
contracts/services/dropmong-web/: openapi.yaml
contracts/services/notification-service/: openapi.yaml
contracts/services/order-service/: openapi.yaml
dashboard/: Dockerfile
docs/architecture/: polyglot-msa-merge-plan.md  redis-admission-gate.md
frontend/: Dockerfile  README.md  ticketmong-front.html  ticketmong-frontend-guide.md
loadtest/: README.md
loadtest/scenarios/: read-api-local.js
scripts/: deploy_tag.sh  list_services.py  list_services.sh
scripts/tests/: test_list_services_stdout.py
services/appointment-service/: .dockerignore  Dockerfile  requirements.txt
services/auth-service/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum  pyproject.toml  requirements.txt
services/backoffice-service/: Dockerfile  README.md  go.mod
services/catalog-service/: Dockerfile  pyproject.toml
services/catalog-service/app/: __init__.py  catalog.py  db.py  main.py  messaging.py  migrations.py  postgres.py  repository.py  schemas.py  store.py
services/catalog-service/migrations/: env.py  script.py.mako
services/catalog-service/migrations/versions/: 0001_catalog_projection.py  0002_inventory_projection.py
services/catalog-service/tests/: test_catalog_api.py  test_catalog_contract.py  test_catalog_postgres.py  test_database_observability.py  test_inventory_consumer.py  test_inventory_projection_postgres.py  test_migration_cli.py
services/catalog-service/typings/aiokafka/: __init__.pyi
services/concert-service/: Dockerfile  README.md  pyproject.toml
services/concert-service/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
services/concert-service/app/entities/: __init__.py  concerts.py  models.py  policies.py  reviews.py  seats.py  showtimes.py  venues.py
services/concert-service/app/repositories/: __init__.py  concerts.py  seats.py  showtimes.py
services/concert-service/app/routers/: __init__.py  dependencies.py  provider_concerts.py  provider_policies.py  provider_seats.py  provider_venues.py  public.py
services/concert-service/app/schemas/: __init__.py  concerts.py  seats.py  showtimes.py
services/concert-service/app/services/: __init__.py  base.py  catalog.py  policies.py  reviews.py  seats.py  serializers.py  showtimes.py  venues.py
services/concert-service/cmd/server/: main.py
services/concert-service/tests/: test_app.py  test_concert_api.py  test_concert_services.py
services/concert-service/tests/integration/: test_postgres_repository.py
services/concert-service/tests/unit/domain/: test_concert_domain_rules.py
services/coupon-service/: .env.example  Dockerfile  README.md  go.mod  go.sum
services/dropmong-web/: .env.example  Dockerfile  README.md  eslint.config.mjs  instrumentation.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
services/go-reference-service/: .env.example  Dockerfile  README.md  go.mod  go.sum
services/interest-service/: Dockerfile  pyproject.toml
services/interest-service/app/: counter_repository.py  counter_store.py  db.py  events.py  main.py  messaging.py  models.py  postgres.py  repository.py  store.py  view_ranking_worker.py  view_repository.py  view_store.py
services/interest-service/tests/: test_interest_api.py  test_messaging.py  test_ranking_api.py  test_view_ranking_worker.py
services/interest-service/tests/integration/: test_ranking_postgres.py
services/notification-service/: .dockerignore  Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
services/notification-service/app/: __init__.py  auth.py  config.py  database.py  db.py  main.py  messaging.py  metrics.py  models.py  observability.py  postgres.py  repository.py  schemas.py  store.py  worker.py
services/notification-service/app/consumers/: kafka_consumer.py
services/notification-service/app/routers/: notifications.py
services/notification-service/app/services/: notification_service.py
services/notification-service/migrations/: env.py
services/notification-service/migrations/versions/: 0001_notification_storage.py
services/notification-service/tests/: test_notification_api.py  test_notification_consumer_commit.py  test_notification_messaging.py  test_notification_metrics.py  test_notification_storage.py  test_notifications.py
services/notification-service/tests/integration/: migration_test_support.py  test_notification_migrations.py
services/order-service/: Dockerfile  pyproject.toml
services/patient-service/: .dockerignore  Dockerfile
services/payment-service/: Dockerfile  pyproject.toml  requirements.txt
services/prescription-service/: .dockerignore  Dockerfile  requirements.txt
services/reference-service/: README.md
services/reservation-service/: Dockerfile  README.md  pyproject.toml
services/ticket-service/: Dockerfile  pyproject.toml
services/user-service/: .env.example  Dockerfile  README.md  go.mod  go.sum
tests/: README.md  Taskfile.yml
tests/docker/: Dockerfile
tests/e2e/: aws-istio-purchase-runner.md  aws-purchase-fixture-contract.md  docker-compose.yml  envoy-auth.yaml
tests/scripts/: api_benchmark_report.py  dropmong_api_benchmark.py
(+1393 files in other folders)
